# av

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs  scraper.rs  types.rs  util.rs
src/sources/: dmm.rs  javlibrary.rs  mod.rs
